@@ -1,3 +1,15 @@
+2021-06-01  Chris Dumez  <cdumez@apple.com>
+
+        Drop unused AudioChannel::resizeSmaller()
+        https://bugs.webkit.org/show_bug.cgi?id=226516
+
+        Reviewed by Sam Weinig.
+
+        * platform/audio/AudioBus.cpp:
+        * platform/audio/AudioBus.h:
+        * platform/audio/AudioChannel.cpp:
+        * platform/audio/AudioChannel.h:
+
 2021-06-01  Wenson Hsieh  <wenson_hsieh@apple.com>
 
         [macOS] Data detector highlights should appear when hovering inside image overlays
